--- a/语言核心和内建模块/语言核心/词法结构.md
+++ b/语言核心和内建模块/语言核心/词法结构.md
@@ -60,13 +60,65 @@
 
 * 最佳做法是对所有文本文件(包括 Python 源文件)使用 utf-8。
 
-## 记号
+## Tokens
 
-### 标识
+* Python 将每一逻辑行分成一系列称为 Token 的基本词汇组成部分。
+
+* 每个 Token 对应于逻辑行的子字符串。
+
+* 一般 Token 的类型有标识符，关键字，运算符，定界符和字面量。
+
+* 可以在 Token 之间自由使用空格来分隔它们。
+
+* 在逻辑上相邻的标识符或关键字之间必须有一些空格分隔；否则，Python 会将它们解析为一个更长的标识符。
+
+### 标识符
+
+* 标识符用于指定变量，函数，类，模块或其他对象的名称。
+
+* 标识符以字母开头(在 v2 中，从 A 到 Z 或从 a 到 z；在 v3 中，允许使用 Unicode 字符）或下划线(_)，然后是零个或多个字母，下划线和数字(在 v2 中，从 0 到 9；在 v3 中，允许使用 Unicode 字符)。
+
+* 标识符区分大小写：小写字母和大写字母不同。标点字符(例如 @，$ 和 ! 不允许用在标识符中)。
+
+* 通常的 Python 风格是以大写字母开头的类名，以小写字母开头的其他标识符。
+
+* 以单个下划线开头的标识符(`_name`)按惯例表示该标识符是私有的。
+
+* 以两个下划线开头的标识符(`__name`)表示该标识符是高度私的。
+
+* 如果标识符以两个下划线开头，且以两个下划线结尾(`__name__`)，则表示该标识符是语言定义的特殊名称。
+
+* 标识符 `_` 在交互式解释器中是有特殊含义的。如果交互式解释器求值的最后一个表达式有值结果，就将结果绑定到 _；如果没有，不做任何绑定。
 
 ### 关键字
 
+|  |  |  |  |  |  |  |  |
+| :-: | :-: | :-: | :-: | :-: | :-: | :-: | :-: |
+| and | continue | except | global | lambda | raise | yield | `async`(v3) |
+| as | def | `exec`(v2) | if | not | return | `False`(v3) | `await`(v3) |
+| assert | del | finally | import | or | try | `None`(v3) |
+| break | elif | for | in | pass | while | `True`(v3) |
+| class | else | from | is | `print`(v2) | with | `nonlocal`(v3) |
+
+* Python 关键字是 Python 保留用于特殊语法的标识符。不能将关键字用作常规标识符("关键字"也称为"保留字")。
+
+* 在 v3 中，exec 和 print 不再是关键字：它们在 v2 中是语句，但在 v3 中是函数。
+
+* False，None，True 和 nonlocal 是 v3 中的新增关键字。其中 False，None 和 True 是 v2 中的内置常量，但不是关键字。
+
+* async 和 await 是 Python 3.7 中的新增的关键字。
+
+* v2 有 31 个关键字(不再增加)；v3 有 35 个关键字(还在增加)。
+
 ### 运算符
+
+|  |  |  |  |  |  |  |  |  |  |
+| :-: | :-: | :-: | :-: | :-: | :-: | :-: | :-: | :-: | :-: |
+| + | - | * | / | % | ** | // | << | >> | & |
+| \| | ^ | ~ | < | <= | > | >= | <> | != | == |
+| `@`(v3) |
+
+* 在 v3 中，@ 可以作为用于矩阵乘法的运算符。
 
 ### 定界符
 
