`词法结构.md` completed

--- a/语言核心和内建模块/语言核心/词法结构.md
+++ b/语言核心和内建模块/语言核心/词法结构.md
@@ -1,94 +1,94 @@
 # 词法结构
 
-* 编程语言的词法结构是一组基本规则，用于控制用该语言编写程序的方式。
+* 编程语言的词法结构是`一组基本规则`，用于`控制用该语言编写程序的方式`。
 
-* 词法结构是语言的最底层语法，用于指定诸如变量名看起来是怎样的以及如何表示注释之类的内容。
+* 词法结构是语言的`最底层语法`，用于指定诸如变量名看起来是怎样的以及如何表示注释之类的内容。
 
-* 和任何其他文本文件一样，每个 Python 源文件都是一个字符序列。
+* 和任何其他文本文件一样，`每个 Python 源文件都是一个字符序列`。
 
-* Python 非常注重程序布局，尤其是关于行和缩进。
+* `Python` 非常`注重程序布局`，尤其是关于`行`和`缩进`。
 
 ## 行与缩进
 
-* Python 程序由一系列逻辑行组成，每个逻辑行由一个或多个物理行组成。每个物理行都可以以注释结尾。
+* Python 程序由`一系列逻辑行`组成，每个`逻辑行`由`一个或多个物理行`组成。每个`物理行`都`可以以注释结尾`。
 
-* 不在字符串文字中的 # 号开始注释。 # 之后的所有字符均为注释。仅包含空格的行是空白行：Python 会忽略它。
+* `不在字符串文字中的 # 号开始注释`。 `# 之后的所有字符均为注释`。仅包含空格的行是`空白行`：`Python 会忽略`它。
 
-* 在 Python 中，物理行的结尾标记了大多数语句的结尾。不使用定界符(例如，分号)来终止 Python 语句。
+* 在 Python 中，`物理行的结尾标记了大多数语句的结尾`。`不使用定界符`(例如，分号)来`终止 Python 语句`。
 
-* 当一条语句太长而无法放在物理行上时，可以通过确保第一条物理行没有注释并以反斜杠(`\`)结尾，将两条相邻的物理行连接到一条逻辑行中。
+* 当一条`语句太长`而无法放在物理行上时，可以通过确保第一条物理行没有注释并以`反斜杠`(`\`)结尾，`将两条相邻的物理行连接到一条逻辑行`中。
 
-* 如果存在尚未关闭左括号(()，方括号([)或花括号({)，则 Python 也会自动将相邻的物理行合并为一条逻辑行。
+* 如果`存在尚未关闭`左`括号`(()，方括号([)或花括号({)，则 Python 也会`自动将相邻的物理行合并为一条逻辑行`。
 
-* 用三引号引起来的字符串文字可以跨越物理行。
+* 用`三引号引起来的字符串`字面量`可以跨越物理行`。
 
-* 逻辑行中第一个物理行之后的物理行称为续行。
+* 逻辑行中第一个物理行之后的物理行称为`续行`。
 
-* 缩进问题适用于每条逻辑行的第一条物理行，不适用于延续线。
+* `缩进要求`适用于每条逻辑行的第一条物理行，`不适用于延续线`。
 
-* Python 使用缩进来表示程序的块结构。缩进是表示块的唯一方法。
+* Python 使用`缩进`来表示程序的`块结构`。`缩进是表示块的唯一方法`。
 
-* Python 程序中的每个逻辑行均以其左侧的空格缩进。块是连续的逻辑行序列，所有逻辑行都缩进相同的数量；缩进较少的逻辑行将结束该块。块中的所有语句必须与复合语句中的所有子句具有相同的缩进。
+* Python 程序中的`每个逻辑行`均`以其左侧的空格缩进`。`块是连续的逻辑行序列`，所有逻辑行都缩进相同的数量；`缩进较少的逻辑行将结束该块`。块中的所有语句必须与复合语句中的所有子句具有相同的缩进。
 
-* 源文件中的第一条语句必须没有缩进。在交互式解释器主提示符 >>> 上键入的语句也必须没有缩进。
+* `源文件中的第一条语句必须没有缩进`。在`交互式解释器`主提示符 `>>>` 上键入的`语句`也`必须没有缩进`。
 
 * v2 逻辑上将每个制表符最多替换八个空格，以便该制表符后的下一个字符进入逻辑列 9、17、25，依此类推。
 
-* 标准 Python 样式是每个缩进级别使用四个空格(从不使用制表符)。
+* `标准 Python 样式`是每个缩进级别使用`四个空格`(从不使用制表符)。
 
-* 不要混用空格和制表符来缩进，因为不同的工具对制表符的处理方式有所不同。
+* `不要混用空格和制表符`来缩进，因为不同的工具对制表符的处理方式有所不同。
 
 * v2 Python 解释器的 -t 和 -tt 选项确保避免 Python 源代码中的制表符和空格使用不一致。
 
-* 在 v3 中，Python 不允许混合使用制表符和空格进行缩进。
+* 在 `v3` 中，Python `不允许混合使用制表符和空格进行缩进`。
 
-* 使用空格，而不是制表符。建议配置自己喜欢的编辑器以将制表符替换为四个空格。这样，所有 Python 源代码仅包含空格，而不包含制表符。这样，所有工具在处理 Python 源文件中的缩进方面都是一致的。
+* `使用空格，而不是制表符`。建议配置自己喜欢的编辑器以将制表符替换为四个空格。这样，所有 Python 源代码仅包含空格，而不包含制表符。这样，所有工具在处理 Python 源文件中的缩进方面都是一致的。
 
-* 最佳的 Python 风格是将代码块缩进四个空格，并且不使用制表符。
+* `最佳`的 Python `风格`是将代码块缩进`四个空格`，并且不使用制表符。
 
 ## 字符集
 
-* v3 源文件可以使用编码为 UTF-8 的任何 Unicode 字符。
+* `v3` 源文件可以使用编码为 `UTF-8` 的任何 Unicode 字符。
 
-* v2 源文件通常由 ASCII 集中的字符组成。
+* `v2` 源文件通常由 `ASCII` 集中的字符组成。
 
 * 在 v2 和 v3 中，都可以选择告诉 Python 某个源文件是以不同的编码编写的。在这种情况下，Python 使用该编码来读取文件(在 v2 中，只能在注释和字符串文字中使用非 ASCII 字符)。
 
-* 要让 Python 知道源文件是用非标准编码编写的，请在源文件开始添加注释(例如 `# coding: iso-8859-1`)。`coding:` 后写出 Python 已知且兼容的 ASCII 编解码器名称(例如 utf-8 或 iso-8859-1)。请注意，只有在源文件的开头(可以在"shebang 行" 之后)，这种编码指令注释(也称为编码声明)才有效。
+* `要让 Python 知道源文件是用非标准编码编写的，请在源文件开始添加注释`(例如 `# coding: iso-8859-1`)。`coding:` 后写出 Python 已知且兼容的 `ASCII 编解码器名称`(例如 utf-8 或 iso-8859-1)。请注意，`只有在源文件的开头`(可以在"shebang 行" 之后)，这种`编码指令注释`(也称为编码声明)`才有效`。
 
 * v2 中编码指令的唯一作用是可以在字符串文字和注释中使用非 ASCII 字符。
 
-* 最佳做法是对所有文本文件(包括 Python 源文件)使用 utf-8。
+* `最佳`做法是对`所有文本文件`(包括 Python 源文件)使用 `utf-8`。
 
 ## Tokens
 
 * Python 将每一逻辑行分成一系列称为 Token 的基本词汇组成部分。
 
-* 每个 Token 对应于逻辑行的子字符串。
+* 每个 `Token` 对应于`逻辑行`的`子字符串`。
 
-* 一般 Token 的类型有标识符，关键字，运算符，定界符和字面量。
+* 一般 Token 的类型有`标识符`，`关键字`，`运算符`，`定界符`和`字面量`。
 
-* 可以在 Token 之间自由使用空格来分隔它们。
+* 可以在 Token 之间自由`使用空格`来`分隔`它们。
 
-* 在逻辑上相邻的标识符或关键字之间必须有一些空格分隔；否则，Python 会将它们解析为一个更长的标识符。
+* 在逻辑上`相邻的标识符或关键字之间必须有一些空格分隔`；否则，Python 会将它们解析为一个更长的标识符。
 
 ### 标识符
 
-* 标识符用于指定变量，函数，类，模块或其他对象的名称。
+* `标识符`用于指定`变量`，`函数`，`类`，`模块`或`其他对象`的`名称`。
 
-* 标识符以字母开头(在 v2 中，从 A 到 Z 或从 a 到 z；在 v3 中，允许使用 Unicode 字符）或下划线(_)，然后是零个或多个字母，下划线和数字(在 v2 中，从 0 到 9；在 v3 中，允许使用 Unicode 字符)。
+* 标识符以`字母`(在 v2 中，从 A 到 Z 或从 a 到 z；在 v3 中，允许使用 Unicode 字符）或`下划线`(_)`开头`，然后是`零个或多个字母，下划线和数字`(在 v2 中，从 0 到 9；在 v3 中，允许使用 Unicode 字符)。
 
-* 标识符区分大小写：小写字母和大写字母不同。标点字符(例如 @，$ 和 ! 不允许用在标识符中)。
+* `标识符区分大小写`：小写字母和大写字母不同。`不允许使用标点字符`(例如 @，$ 和 !)。
 
-* 通常的 Python 风格是以大写字母开头的类名，以小写字母开头的其他标识符。
+* 通常的 Python 风格是以`大写字母开头`的`类名`，以`小写字母开头`的`其他标识符`。
 
-* 以单个下划线开头的标识符(`_name`)按惯例表示该标识符是私有的。
+* 以单个下划线开头的标识符(`_name`)按惯例表示该标识符是`私有的`。
 
-* 以两个下划线开头的标识符(`__name`)表示该标识符是高度私的。
+* 以两个下划线开头的标识符(`__name`)表示该标识符是`高度私有的`。
 
-* 如果标识符以两个下划线开头，且以两个下划线结尾(`__name__`)，则表示该标识符是语言定义的特殊名称。
+* 如果标识符以两个下划线开头，且以两个下划线结尾(`__name__`)，则表示该标识符是`语言定义的特殊名称`。
 
-* 标识符 `_` 在交互式解释器中是有特殊含义的。如果交互式解释器求值的最后一个表达式有值结果，就将结果绑定到 _；如果没有，不做任何绑定。
+* 标识符 `_` 在交互式解释器中是有特殊含义的。如果交互式解释器求值的`最后一个表达式`有`值`，就将这个值`绑定到 _`；如果没有，不做任何绑定。
 
 ### 关键字
 
@@ -100,15 +100,15 @@
 | break | elif | for | in | pass | while | `True`(v3) |
 | class | else | from | is | `print`(v2) | with | `nonlocal`(v3) |
 
-* Python 关键字是 Python 保留用于特殊语法的标识符。不能将关键字用作常规标识符("关键字"也称为"保留字")。
+* Python `关键字`是 Python 保留`用于特殊语法`的`标识符`。不能将关键字用作常规标识符("关键字"也称为"保留字")。
 
-* 在 v3 中，exec 和 print 不再是关键字：它们在 v2 中是语句，但在 v3 中是函数。
+* 在 v3 中，`exec` 和 `print` `不再是关键字`：它们在 v2 中是语句，但在 `v3` 中是`函数`。
 
-* False，None，True 和 nonlocal 是 v3 中的新增关键字。其中 False，None 和 True 是 v2 中的内置常量，但不是关键字。
+* `False`，`None`，`True` 和 `nonlocal` 是 `v3` 中的`新增关键字`。其中 False，None 和 True 是 v2 中的内置常量，但不是关键字。
 
-* async 和 await 是 Python 3.7 中的新增的关键字。
+* `async` 和 `await` 是 `Python 3.7` 中的`新增的关键字`。
 
-* v2 有 31 个关键字(不再增加)；v3 有 35 个关键字(还在增加)。
+* `v2` 有 `31` 个关键字(`不再增加`)；`v3` 有 `35` 个关键字(`还在增加`)。
 
 ### 运算符
 
@@ -118,10 +118,83 @@
 | \| | ^ | ~ | < | <= | > | >= | <> | != | == |
 | `@`(v3) |
 
-* 在 v3 中，@ 可以作为用于矩阵乘法的运算符。
+* 在 `v3` 中，`@` 可以作为用于`矩阵乘法`的`运算符`。
 
 ### 定界符
 
+* Python 使用以下字符及其组合作为`表达式`，`列表，字典和 set 字面量`，`各种语句`以及`其他目的`中的`定界符`。
+
+|  |  |  |  |  |  |  |  |  |  |
+| :-: | :-: | :-: | :-: | :-: | :-: | :-: | :-: | :-: | :-: |
+| ( | ) | [ | ] | { | } |
+| , | : | . | ` | = | ; | @ |
+| += | -= | *= | /= | //= | %= |
+| &= | \|= | ^= | >>= | <<= | **= |
+
+* `句点(.)`可以出现在浮点字面量(例如2.3)和虚数字面量(例如2.3j)中。
+
+* 最后两行是`扩充的赋值运算符`，它们是`分隔符`，但`也执行操作`。
+
+* `'`、`"`、`#`、`\` 作为其他 Token 的一部分时具有特殊的含义。
+
+* `'`、`"` `包裹`的是`字符串字面量`。
+
+* 字符串外的 `#` 标识一行`注释的开始`。
+
+* `\` 是`转义起始字符`。
+
 ### 字面量
 
+* `字面量`是程序中`数据值`(数字，字符串或容器)的`直接表示`。
+
+|  |  |
+| :-: | :-: |
+| 42 | `整数字面量` |
+| 3.14 | `浮点数字面量` |
+| 1.0j | `虚数字面量` |
+| 'hello' | `字符串字面量` |
+| "world" | `字符串字面量` |
+| """Good <br/>night""" | `多行字符串字面量` |
+
+* 将数字和字符串字面量与适当的定界符结合使用，可以构建直接表示`容器类型`的`数据值`的字面量。
+
+|  |  |
+| :-: | :-: |
+| [42, 3.14, 'hello'] | `列表` |
+| [] | `空列表` |
+| 100, 200, 300 | `元组` |
+| () | `空元组` |
+| {'x':42, 'y':3.14} | `字典` |
+| {} | `空字典` |
+| {1, 2, 4, 8, 'string'} | `Set` |
+| `set()` | `空 Set`(没有字面量来表示一个空 Set；使用 set() 代替 |
+
 ## 语句
+
+* `Python 源文件`由`一系列语句`组成。`语句`是 `Python` 的`唯一顶级语法元素`。
+
+* 语句分为：`简单语句`和`复合语句`两种。
+
+### 简单语句
+
+* 简单语句：`不包含其他语句`的`语句`。
+
+* 一个简单语句`完全位于逻辑行内`。也可以在`单个逻辑行`上`放置多个简单语句`，并使用`分号(;)`作为`分隔`符。
+
+* Python 规范建议`每行一条简单语句`，这样程序更具`可读性`。
+
+* `任何表达式`都可以`作为`一个`简单语句`独立`存在`。
+
+* 在`交互式会话中`，解释器会在提示符(`>>>`)处显示您输入的`表达式语句`的`结果`，并将结果`绑定到`名为 `_` 的全局变量。
+
+* 在`交互式会话外`，`表达式语句`仅对`具有副作用`的`调用`函数(或其他可调用对象)`有用`。
+
+* `赋值`是一个`简单语句`，它`为变量赋值`，Python 中的`赋值是一条语句`，永远`不能成为表达式的一部分`。
+
+### 复合语句
+
+* `复合语句`包含`一个或多个其他语句`并控制它们的执行。
+
+* `复合语句`具有`一个或多个子句`，它们以`相同的缩进`对齐。
+
+* `复合语句`都有一个以`关键字开头`，以`冒号(:)结尾`，`然后是主体`的抬头行，该`主体`由`一个或多个语句`组成。
