`数据类型.md` writing

--- a/语言核心和内建模块/语言核心/数据类型.md
+++ b/语言核心和内建模块/语言核心/数据类型.md
@@ -53,6 +53,18 @@
 
 ### 浮点数
 
+|  |  |
+| :-: | :-: |
+| 0., 0.0, .0, 1., 1.0, 1e0, 1.e0, 1.0e0 | 浮点字面量 |
+
+* 浮点字面量是由十进制数字组成的序列，其中包括小数点(.)，指数后缀(e 或 E，后跟 + 或 -(可选)，再后跟一个或多个数字)，或两者共存。
+
+* 浮点字面量的前导字符不能为 e 或 E；可以是任何数字或句点(.)。
+
+* Python 浮点数对应于 C 的 double，并共享其范围和精度的限制。
+
+* 有关各个平台上浮点数的确切范围和精度，请参见 sys.float_info。
+
 ### 复数
 
 ## 序列(Sequences)
