`变量和引用.md` writing

--- a/语言核心和内建模块/语言核心/变量和引用.md
+++ b/语言核心和内建模块/语言核心/变量和引用.md
@@ -48,4 +48,37 @@
 
 ## 赋值语句
 
+* 赋值语句可以是`简单赋值`或`复合赋值`。
+
+* `简单赋值`给`变量值`(`name=value`)是`创建新变量`或`将现有变量重新绑定到新值`的方式。
+
+* 对`对象属性`的`简单赋值`(`x.attr=value`)是请求对对象`创建`或`重新绑定属性`。
+
+* 对`容器`中某个`项`的`简单赋值`(`x[k]=value`)是请求对容器`创建`该`项`或将`索引或键重新绑定`。
+
+* `复合赋值`本身`无法创建新的引用`。
+
+* `复合赋值`可以`重新绑定变量`，请求对象`重新绑定`其现有属性或项之一，或请求目标对象`修改自身值`。
+
+* 当请求对对象使用`复合赋值`时，由`对象决定`是否以及`如何满足请求`以及`是否抛出异常`。
+
+### 简单赋值
+
+* 最简单形式的简单赋值语句语法：`target = expression`
+
+* 执行赋值时，Python 会评估 expression，然后将 expression 的值绑定到 target。
+
+* 绑定不依赖于 expression 值的类型。在赋值时，Python 在可调用对象和不可调用对象之间没有严格区分，因此可以将函数，方法，类型和其他可调用对象绑定到变​​量，就像可以数字，字符串，列表等绑定到变量一样。在 Python 中，函数是一等公民。
+
+* 绑定依赖于 target 的类型。赋值中的 target 可以是标识符，属性引用，索引或切片。
+
+| target 的类型 | 语法 | 说明 |
+| :-: | :-: | :-: |
+| 标识符 | name = value | 将 value 与标识符(name)绑定 |
+| 属性引用 | obj.name = value | 将 value 与对象 obj 的 name 属性绑定 |
+| 索引(键) | obj[expr] = value | 将 value 与容器 obj 的 expr 索引(键)指示的项绑定 |
+| 切片 | obj[start:stop:stride] = value or obj[slice(start, stop, stride)] | 将 value 中的项与容器 obj 的切片指示的那些项绑定(一般要求 value 中项的个数要与切片中项的个数相等) |
+
+### 复合赋值
+
 ## del 语句
