`变量和引用.md` writing

--- a/语言核心和内建模块/语言核心/变量和引用.md
+++ b/语言核心和内建模块/语言核心/变量和引用.md
@@ -77,7 +77,19 @@
 | 标识符 | name = value | 将 value 与标识符(name)绑定 |
 | 属性引用 | obj.name = value | 将 value 与对象 obj 的 name 属性绑定 |
 | 索引(键) | obj[expr] = value | 将 value 与容器 obj 的 expr 索引(键)指示的项绑定 |
-| 切片 | obj[start:stop:stride] = value or obj[slice(start, stop, stride)] | 将 value 中的项与容器 obj 的切片指示的那些项绑定(一般要求 value 中项的个数要与切片中项的个数相等) |
+| 切片 | obj[start:stop:stride] = value 或 obj[slice(start, stop, stride)] | 将 value 中的项与容器 obj 的切片指示的那些项绑定(一般要求 value 中项的个数要与切片中项的个数相等) |
+
+* 当赋值的 target 是标识符时，赋值语句完成变量的绑定。
+
+* 一般情况下，针对对象使用赋值语句将创建或重新绑定一个或多个属性或项。
+
+* 对象可能拒绝创建或重新绑定某些(或全部)属性或项，如果尝试赋值禁止创建或重新绑定的属性或项，则会引发异常。
+
+* 简单赋值可以有多个 target，它们需要使用多个赋值运算符连接起来。
+
+```python
+a = b = c = 0
+```
 
 ### 复合赋值
 
