`变量和引用.md` writing

--- a/语言核心和内建模块/语言核心/变量和引用.md
+++ b/语言核心和内建模块/语言核心/变量和引用.md
@@ -88,7 +88,29 @@
 * 简单赋值可以有多个 target，它们需要使用多个赋值运算符连接起来。
 
 ```python
+# 首先对最右边的表达式进行求值，然后将其值赋值给左边的每个 target
+# 最右边的表达式，只求值一次
 a = b = c = 0
+```
+
+* 拆箱赋值：左边的多个 target 使用逗号(,)分割(可以使用圆括号或者方括号包裹所有 target)；右边的表达式需要返回一个可迭代对象，且其 item 个数与 target 个数相同，否则会抛出异常。item 与 target 之间进行依次赋值绑定。
+
+```python
+# x 需要是可迭代的对象
+a, b, c = x
+(a, b, c) = x
+[a, b, c] = x
+# 使用拆箱赋值交换变量
+a, b = b, a
+```
+
+* 在 v3 中，拆箱赋值可以在 target 之前使用 \* 运算符，所有的 target 中只能有一个 target 被加星。所有没有被分配的值都将存入一个 list 中，并将它赋值给这个加星 target。
+
+```python
+# 只能有一个加星 target
+# 加星 target 的数据类型是 list
+a = [1, 2, 3, 4, 5]
+a1, *a2, a3 = a
 ```
 
 ### 复合赋值
