`变量和引用.md` completed

--- a/语言核心和内建模块/语言核心/变量和引用.md
+++ b/语言核心和内建模块/语言核心/变量和引用.md
@@ -64,28 +64,28 @@
 
 ### 简单赋值
 
-* 最简单形式的简单赋值语句语法：`target = expression`
+* 最简单形式的`简单赋值语句语法`：`target(LHS) = expression(RHS)`
 
-* 执行赋值时，Python 会评估 expression，然后将 expression 的值绑定到 target。
+* 执行赋值时，Python 会`评估 expression`，然后将 expression 的值`绑定`到 `target`。
 
-* 绑定不依赖于 expression 值的类型。在赋值时，Python 在可调用对象和不可调用对象之间没有严格区分，因此可以将函数，方法，类型和其他可调用对象绑定到变​​量，就像可以数字，字符串，列表等绑定到变量一样。在 Python 中，函数是一等公民。
+* `绑定不依赖于 expression 值的类型`。在赋值时，Python 在`可调用对象`和`不可调用对象`之间`没有严格区分`，因此可以将`函数`，`方法`，`类型`和`其他可调用对象`绑定到变​​量，就像可以`数字`，`字符串`，`列表`等`绑定到变量`一样。在 Python 中，`函数是一等公民`。
 
-* 绑定依赖于 target 的类型。赋值中的 target 可以是标识符，属性引用，索引或切片。
+* `绑定依赖于 target 的类型`。赋值中的 target 可以是`标识符`，`属性引用`，`索引`或`切片`。
 
 | target 的类型 | 语法 | 说明 |
 | :-: | :-: | :-: |
-| 标识符 | name = value | 将 value 与标识符(name)绑定 |
-| 属性引用 | obj.name = value | 将 value 与对象 obj 的 name 属性绑定 |
-| 索引(键) | obj[expr] = value | 将 value 与容器 obj 的 expr 索引(键)指示的项绑定 |
-| 切片 | obj[start:stop:stride] = value 或 obj[slice(start, stop, stride)] | 将 value 中的项与容器 obj 的切片指示的那些项绑定(一般要求 value 中项的个数要与切片中项的个数相等) |
+| `标识符` | name = value | 将 value 与标识符(name)绑定 |
+| `属性引用` | obj.name = value | 将 value 与对象 obj 的 name 属性绑定 |
+| `索引(键)` | obj[expr] = value | 将 value 与容器 obj 的 expr 索引(键)指示的项绑定 |
+| `切片` | obj[start:stop:stride] = value 或 obj[slice(start, stop, stride)] | 将 value 中的项与容器 obj 的切片指示的那些项绑定(一般要求 value 中项的个数要与切片中项的个数相等) |
 
-* 当赋值的 target 是标识符时，赋值语句完成变量的绑定。
+* 当赋值的 target 是`标识符`时，赋值语句完成`变量的绑定`。
 
-* 一般情况下，针对对象使用赋值语句将创建或重新绑定一个或多个属性或项。
+* 一般情况下，针对`对象`使用赋值语句将`创建`或`重新绑定`一个或多个`属性`或`项`。
 
-* 对象可能拒绝创建或重新绑定某些(或全部)属性或项，如果尝试赋值禁止创建或重新绑定的属性或项，则会引发异常。
+* `对象`可以`拒绝创建或重新绑定`某些(或全部)`属性`或`项`，如果`尝试赋值`禁止创建或重新绑定的属性或项，则会`引发异常`。
 
-* 简单赋值可以有多个 target，它们需要使用多个赋值运算符连接起来。
+* 简单赋值可以有`多个 target`，它们需要使用`多个赋值运算符连接`起来。
 
 ```python
 # 首先对最右边的表达式进行求值，然后将其值赋值给左边的每个 target
@@ -93,7 +93,7 @@
 a = b = c = 0
 ```
 
-* 拆箱赋值：左边的多个 target 使用逗号(,)分割(可以使用圆括号或者方括号包裹所有 target)；右边的表达式需要返回一个可迭代对象，且其 item 个数与 target 个数相同，否则会抛出异常。item 与 target 之间进行依次赋值绑定。
+* `拆箱赋值`：`左边`的`多个 target 使用逗号(,)分割`(可以使用`圆括号`或者`方括号`包裹所有 target)；`右边`的表达式需要返回一个`可迭代对象`，且其 `item 个数`与 `target 个数`相同，否则会抛出异常。item 与 target 之间进行`依次赋值绑定`。
 
 ```python
 # x 需要是可迭代的对象
@@ -104,15 +104,84 @@ a, b, c = x
 a, b = b, a
 ```
 
-* 在 v3 中，拆箱赋值可以在 target 之前使用 \* 运算符，所有的 target 中只能有一个 target 被加星。所有没有被分配的值都将存入一个 list 中，并将它赋值给这个加星 target。
+* 在 `v3` 中，`拆箱赋值`可以在 `target` 之前`使用` `*` 运算符，所有的 target 中`只能有一个` target 被`加星`。`所有没有被分配的值`都将`存入`一个 `list` 中，并将它`赋值给`这个`加星 target`。
 
 ```python
 # 只能有一个加星 target
 # 加星 target 的数据类型是 list
 a = [1, 2, 3, 4, 5]
-a1, *a2, a3 = a
+a1, *a2, a3 = a # a 至少要有两个元素。当 a 只有两个元素时，a2 为空 list
+first, *middle, last = x
+# 当 x 是一个 list 时，上述赋值与下面的赋值等价
+first, middle, last = x[0], x[1:-1], x[-1]
 ```
 
 ### 复合赋值
 
+* 在 target 和 expression 之间`使用复合赋值运算符`。
+
+* 复合赋值运算符由`二元运算符`和(`后跟`)`赋值运算符`组成。具体的复合赋值运算符有 `+=` `-=` `*=` `/=` `//=` `%=` `**=` `|=` `>>=` `<<=` `&=` `^=` `@=`(v3)。
+
+* 复合赋值的左边`只能`有`一个` `target`，复合赋值不支持多 target。
+
+* 复合赋值的`处理流程`：
+  1. `求值右边的表达式`；
+  2. target `是否实现`了`二元运算符`对应的`特殊方法`？`实现了进入 3`，`没有实现进入 4`；
+  3. target.\_\_method\_\_(表达式求值结果)。`修改 target 先前绑定的对象`；
+  4. 将 target 引用的对象(操作数1)和表达式的求值结果(操作数2)一起作为`二元运算符`的操作数进行`运算`，最后将运算`结果赋值给`左边的 `target`。`重新绑定 target 到某个新对象`。
+
+```python
+# +=
+x += y
+# 实现了 __iadd__，等价于
+x.__iadd__(y) # 修改 target
+# 没有实现 __iadd__，等价于
+x = x + y # 重新绑定 target
+```
+
+* `执行复合赋值前`的 `target 必须已经绑定了某个对象`。
+
+* `复合赋值`可以`重新绑定 target 到某个新对象`，或`修改 target 先前绑定的对象`，但是`它永远不会创建新引用`。相对应的，`简单赋值`可以`创建新引用到某个对象`或`重新绑定 target 到某个对象`，但是`它永远都不能修改先前绑定的对象`。在这里需要`严格区分`：`对象`和`对对象的引用`。
+
+```python
+# 不修改 x 绑定的原对象，而是让 x 引用一个新对象(x + y 的求值结果)
+x = x + y
+# 对于
+x += y
+# 1. x 实现了 __iadd__，其结果为修改 x 引用的原对象
+# 2. x 没有实现了 __iadd__，等价于 x = x + y，即让 x 引用一个新对象(x + y 的求值结果)
+```
+
 ## del 语句
+
+* `del 语句`本身`不删除对象`，它`只是取消引用与对象之间的绑定`(`解除绑定`)。当某个对象`不再存在任何引用`时，垃圾回收(`GC`)会自动`删除该对象`(`垃圾回收`)。
+
+* del 语句由关键字 `del` 后跟`一个或多个 target` 引用构成，多个 target 之间使用`逗号(,)分隔`。每个 target 可以是`变量`，`属性引用`，`索引`或`切片`，并且必须在`执行 del 时`已经`绑定了对象`。
+
+* 当 del 的 target 是标识符时，`del 语句`意味着`取消绑定变量`。
+
+* 对于`对象属性或项`，del 语句以`解除一个或多个属性或项的绑定`。
+
+* 对象可能`拒绝解除`某些(或全部)`属性或项`的`绑定`，如果`尝试`对其进行`解除`绑定(del 操作)，则会`引发异常`。
+
+* `解除切片的绑定`通常与`为该切片分配空序列`具有`相同的效果`，`具体结果与容器对象的具体实现有关`。另外`容器`也`应该允许` del 操作导致的`副作用`。
+
+```python
+del C[2]
+# 当 C 为字典时，这将使以后对 C[2] 的引用失效(引发 KeyError)，除非再次分配给 C[2] 对象
+# 当 C 为列表时，del C[2] 意味着 C[2] 的每个后续项"向左移"一项。因此，如果 C 足够长，则对 C[2] 的引用仍然有效，但表示的是一个不同的项
+```
+
+## 变量、引用和对象的理解
+
+```python
+name = value
+```
+
+* `变量引用对象`
+
+* name 为`变量`。
+
+* value 为`对象`。
+
+* name 和 value 之间的`关系`为：name `变量` `引用` value `对象`。
