`数值运算.md` writing

--- a/语言核心和内建模块/语言核心/数值运算.md
+++ b/语言核心和内建模块/语言核心/数值运算.md
@@ -1,1 +1,75 @@
 # 数值运算
+
+* 数值是`不可变的对象`。执行数值运算时，会`生成`一个`新`的数值`对象`，而不是修改原有数值对象。
+
+* `z.real` 和 `z.imag` 是复数 z 的`只读属性`，尝试`重新绑定`它们会`抛出异常`。
+
+* 数值的可选符号(`+/-`)，连接复数实部和虚部的 `+` 号，都不是数值字面量的一部分。它们都是`原始运算符`，`遵循`运算符`优先级准则`。
+
+```python
+# 幂运算的优先级高于一元减
+-2 ** 2 # -4
+# 等价于
+-(2 ** 2)
+# 而非
+(-2) ** 2
+```
+
+## 数值转换
+
+* 可以在任意两个 Python `内置类型`之间执行`算术运算`和`比较运算`。如果`操作数`的`类型不同`：Python 将“`较小`”类型的操作数`转换`为“`较大`”类型。类型`从小到大`的顺序是`整数`，`浮点数`和`复数`。
+
+* 可以将`非复数`参数传递给任何`内置数值类型`(`int`，`float` 和 `complex`)来进行`显式转换`。
+
+* `int` 会`删除`参数的`小数部分`(如果有的话)。
+
+* 可以使用`两个数值参数`(`实部`和`虚部`)来调用 `complex`，从而生成复数。
+
+* `不能`将`复数`转换为`另一种数值类型`，因为没有一种明确的方法可以将复数转换为其他数值类型。
+
+```python
+int(1.2) # 1
+float(1) # 1.0
+complex(1) # (1+0j)
+complex(1, 2) # (1+2j)
+complex(1+2j) # (1+2j) 传入复数，保持不变
+```
+
+* 可以使用`适当数值字面量`的`字符串`作为参数调用`对于`的`内置数值类型`，将`字符串类型`转换为`数值类型`。字符串可以包含`扩展字符`：可能具有`前导`和/或`尾随空格`，如可以以`符号开头`，对于`浮点数`可以使用`科学记数法`，对于`复数`可以将`实部`和`虚部`相`加`或相`减`。
+
+* 可以使用`两个参数`调用 `int`：第一个参数是`要转换的字符串`，第二个参数是`基数`，其取值为 `2 到 36` 之间的整数，`返回十进制值`。对于`大于 10 的数`，`从字母开头(小写或大写一样)依次对应多余的“数字”`(A 对应 10，B 对应 11 。。。 Z 对应 35)。
+
+```python
+# 字符串转换为整数
+int('-1') # -1
+int('-1 ') # -1
+int('-11', 2) # -3
+# 字符串表示的是浮点数，调用 int 就会报错
+int('-1.1') # 报错：invalid literal for int() with base 10: '-1.1'
+# 字符串转换为浮点数
+float('-1.1') # -1.1
+float('-1') # -1.0
+float('1e3') # 1000.0
+# 字符串转换为复数
+complex('-1-j') # (-1-1j)
+complex('-1-1e3j') # (-1-1000j)
+complex('-1') # (-1+0j)
+
+# int 字符串可以传递给 float 和 complex，反之不可
+# float 字符串可以传递给 complex，反之不可
+# 简单的说就是这里遵循类型的大小原则，即小可转大，大包含小。
+# int < float < complex
+# 数学上 int 是 float 的真子集，float 是 complex 的真子集
+```
+
+## 算数运算
+
+* 在 Python 中除了`除法`和`幂运算`有`特殊`性外，`其他`算数运算`与一般的编程语言类似`。
+
+### 除法
+
+### 幂运算
+
+## 比较
+
+## 整数上的位运算
