`数值运算.md` writing

--- a/语言核心和内建模块/语言核心/数值运算.md
+++ b/语言核心和内建模块/语言核心/数值运算.md
@@ -68,8 +68,58 @@ complex('-1') # (-1+0j)
 
 ### 除法
 
+* 如果 `/` `//` `%` 的`右`运算数是 `0`，Python 将抛出`运行时异常`。
+
+* `/(v3)` 执行`一般除法`。运算数`没有复数`，返回`浮点数`；运算数`有复数`，返回`复数`。
+
+* `//(v3)` 执行`截断除`，所以它总是返回`整数部分`。当运算数`含有浮点数`时，返回`浮点类型结果`，`其它`情况返回`整数类型结果`。`运算数不能为复数`。
+
+* `/(v2)` 当运算数`只有整数`时，执行`截断除`；当运算数`存在浮点数`时，执行`一般除法`。
+
+* `//(v2)` 执行`截断除`，与 `v3` 版本行为`一致`。
+
+```python
+# v3
+1 / 2 # 0.5
+(1+2j) / 2 # (0.5+1j)
+1 // 2 # 0
+1 // 2.0 # 0.0
+# v2
+1 / 2 # 0
+1 / 2.0 # 0.5
+(1+2j) / 2 # (0.5+1j)
+1 // 2 # 0
+1 // 2.0 # 0.0
+```
+
+* 为`确保除法行为不取决于`使用的 `Python` 的确切`版本`，请在要`截断除法`时始终使用 `//`。当`不想截断`时，请使用 `/`，但`要确保至少一个运算数不是整数`。
+
+```python
+a / b
+# 上述代码，在 v2 v3 中的行为具有不确定性
+# 在 v2 中，如果 a b 全为整数时，执行截断除法(返回整数)，否则执行一般除法(返回浮点数或整数)。
+# 在 v3 中，执行一般除法。返回浮点数或复数。
+# 为了规范除法行为，请使用
+1.0 * a / b # 将始终执行一般除法，并返回浮点数或复数。
+a // b
+# 上述代码，在 v2 v3 中的行为具有具有一致性。
+# 执行截断除，总是返回整数部分。当运算数含有浮点数时，返回浮点类型结果，其它情况返回整数类型结果。运算数不能为复数。
+```
+
+* 要`检查` `v2` 版本程序在使用`除法`方面是否具有`版本依赖性`，请在 Python 命令上`使用`选项 `-Qwarn` 以`获得`有关在整数操作数上`使用 / 的运行时警告`。
+
+* 内置的 `divmod` 函数接受`两个数值参数`(`不能有复数`)，返回`商`和`余数`组成的`元组`(参数`含浮点数`，就会返回`浮点数元组`，否则，返回`整数元组`)。通过这个函数能`方便`的`获取商和余数`，而`不必同时使用` `//`(获取商) 和 `%`(获取余数)。
+
 ### 幂运算
+
+* `v2` 中的幂运算 `a ** b` 在 `a 小于零`且 `b 是具有非零小数部分的浮点值`时会`引发异常`，但在 `v3` 中，它`返回`计算的`复数结果`。
+
+* 内置的 `pow(a, b)` 函数返回与 `a ** b` `相同`的结果。`pow(a, b, c)` 返回与 `(a ** b) % c` `相同`的结果，但`速度更快`。
 
 ## 比较
 
+* All objects, including numbers, can be compared for equality (==) and inequality (!=). Comparisons requiring order (<, <=, >, >=) may be used between any two numbers, unless either operand is complex, in which case they raise runtime exceptions. All these operators return Boolean values (True or False). Beware comparing floating-point numbers for equality, as the online tutorial explains.
+
 ## 整数上的位运算
+
+* Integers can be interpreted as strings of bits and used with the bitwise operations shown in Table 3-2. Bitwise operators have lower priority than arithmetic operators. Positive integers are conceptually extended by an unbounded string of 0 bits on the left. Negative integers, as they’re held in two’s complement representation, are conceptually extended by an unbounded string of 1 bits on the left.
