`数值运算.md` completed

--- a/语言核心和内建模块/语言核心/数值运算.md
+++ b/语言核心和内建模块/语言核心/数值运算.md
@@ -118,8 +118,54 @@ a // b
 
 ## 比较
 
-* All objects, including numbers, can be compared for equality (==) and inequality (!=). Comparisons requiring order (<, <=, >, >=) may be used between any two numbers, unless either operand is complex, in which case they raise runtime exceptions. All these operators return Boolean values (True or False). Beware comparing floating-point numbers for equality, as the online tutorial explains.
+* 可以比较`所有对象`(当然包括数字)的相等性(`==`)和不相等性(`!=`)。
+
+* 可以在`任意`两个`数字`(`复数除外`，在这种情况下会`抛出异常`)之间使用确定`大小关系`(`<`，`<=`，`>`，`>=`)的比较运算符。
+
+* `所有`的`比较运算符`均`返回布尔值`(True 或 False)。
+
+* `比较浮点数`是否相等时，需要`小心`。
 
 ## 整数上的位运算
 
-* Integers can be interpreted as strings of bits and used with the bitwise operations shown in Table 3-2. Bitwise operators have lower priority than arithmetic operators. Positive integers are conceptually extended by an unbounded string of 0 bits on the left. Negative integers, as they’re held in two’s complement representation, are conceptually extended by an unbounded string of 1 bits on the left.
+* `整数`可以使用`按位运算符`(`~`，`&`，`|`，`^`，`<<`，`>>`)。
+
+* `~`，`&`，`|`，`^` 在运算时，都带上了符号位。
+
+* a << b 等价于 a \* (2 \*\* b)
+
+* a >> b 等价于 a // (2 \*\* b)。截断除法，是在保证余数为正数的前提下，得出最终计算结果的。
+
+```python
+# 数值为负数，使用补码表示，数值为正数，使用原码表示。
+# ~ 运算时，带上符号位。
+~12 # -13。01100 取反 10011(补码) 0011 化为十进制(减 1，然后再按位取反) -0b1101(-13)
+~-12 # 11。10100 取反 01011(原码) 化为十进制 11
+# & 运算时，带上符号位。
+-12 & 10 # 0。 10100 & 01010 -> 00000
+-12 & -10 # -12。 10100 & 10110 -> 10100
+# | 运算时，带上符号位。
+-12 | 10 # -2。 10100 | 01010 -> 11110
+-12 | -10 # -10。 10100 | 10110 -> 10110
+# ^ 运算时，带上符号位。
+-12 ^ 10 # -2。 10100 ^ 01010 -> 11110
+-12 ^ -10 # 2。 10100 ^ 10110 -> 00010
+# a << b 等价于 a * (2 ** b)
+-1 << 2 # -4。等价于 -1 * (2 ** 2)
+# a >> b 等价于 a // (2 ** b)。截断除法，是在保证余数为正数的前提下，得出最终计算结果的。
+-7 >> 1 # -4。等价于 -7 // (2 ** 1)
+-6 >> 2 # -2。等价于 -6 // (2 ** 2)
+-4 >> 1 # -2。等价于 -4 // (2 ** 1)
+-2 >> 1 # -1。等价于 -2 // (2 ** 1)
+-2 >> 2 # -1。等价于 -2 // (2 ** 2)
+```
+
+* `按位运算符`的`优先级低于算术运算符`。
+
+* 从概念上讲，在`整数`的`二进制表示`中，`最左侧`的位为符号位，`0` 表示`正数`，`1` 表示`负数`。`正数`使用`原码`表示，`负数`使用`补码`表示。`符号位`和`数值的二进制表示`之间可以`补任意多个 0` 而`不`会`影响数值大小`。
+
+| 二进制码 | 由来 |
+| :-: | :-: |
+| 原码 | 直接二进制表示 |
+| 反码 | 原码按位取反 |
+| 补码 | 原码按位取反(反码)，然后再加 1 |
