`变量和引用.md` modified

--- a/语言核心和内建模块/语言核心/变量和引用.md
+++ b/语言核心和内建模块/语言核心/变量和引用.md
@@ -76,8 +76,8 @@
 | :-: | :-: | :-: |
 | `标识符` | name = value | 将 value 与标识符(name)绑定 |
 | `属性引用` | obj.name = value | 将 value 与对象 obj 的 name 属性绑定 |
-| `索引(键)` | obj[expr] = value | 将 value 与容器 obj 的 expr 索引(键)指示的项绑定 |
-| `切片` | obj[start:stop:stride] = value 或 obj[slice(start, stop, stride)] | 将 value 中的项与容器 obj 的切片指示的那些项绑定(一般要求 value 中项的个数要与切片中项的个数相等) |
+| `索引(键)` | obj\[expr\] = value | 将 value 与容器 obj 的 expr 索引(键)指示的项绑定 |
+| `切片` | obj\[start:stop:stride\] = value <br> obj[slice(start, stop, stride)] = value | 将 value 中的项与容器 obj 的切片指示的那些项绑定(`切片`中的`项`是`连续`的，对 `value` 中`项`的`个数没有要求`；`切片`中的`项不是连续`的，一般要求 `value` 中`项`的`个数`要与`切片中项`的`个数相等`) |
 
 * 当赋值的 target 是`标识符`时，赋值语句完成`变量的绑定`。
 
